# rust-todo-app

./: Cargo.toml  Rocket.toml  tasks.txt
entity/: Cargo.toml
entity/src/: tasks.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240630_063944_create_tasks_table.rs  m20240709_062721_create_users_table.rs  main.rs
public/: todo_list.css
src/: main.rs  pool.rs
templates/: base.html.tera  login_page.html.tera  signup_page.html.tera  todo_list.html.tera
